第二次发送数据到我的存储库

--- a/1.html
+++ b/1.html
@@ -1,1 +1,10 @@
-html4s
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>这货不是网页</title>
+</head>
+<body><h1>看图别看网页</h1>
+<img src="timg.jpg" title="你瞅啥？">
+</body>
+</html>
