--- a/2.html
+++ b/2.html
@@ -20,43 +20,44 @@
         width: 412px;
         height: 30px;
     }
-        .list{
+        #menu .list{
             width: 100px;
             height: 30px;
-            background: #ff0000;
+            background: #f00;
             float: left;
             margin-right: 3px;
-            text-align: center
         }
-        .list a{
+        #menu a{
+            color: #fff;
             width: 100%;
             height: 100%;
             line-height: 30px;
-
+            display: block;
+            /*float: left;*/
+            text-align: center;
+            background: #f00;
         }
-        .list:hover {
+         .domenu{
+             display: none;
+         }
+        #menu a:hover{
             background: orange;
-
+            }
+        .list:hover .domenu{
+            display: block;
         }
-        #menu .list .domenu{
-            width: 100px;
-            height: 30px;
-            background: #0f0;
-        }
-
-
     </style>
 </head>
 <body>
 <div id="menu">
-    <div class="list">
+    <div class="list" id="one">
         <a href="">link1</a>
-        <div class="domenu">
-            <a href="">1</a>
-        </div>
-        <div class="domenu">
-            <a href="">2</a>
-        </div>
+            <div class="domenu">
+                <a href="">1</a>
+            </div>
+            <div class="domenu">
+                <a href="">2</a>
+            </div>
     </div>
     <div class="list">
         <a href="">link2</a>
