--- a/3.html
+++ b/3.html
@@ -5,12 +5,11 @@
     <title>Title</title>
     <style>
         *{
-            margin: 0;
-            padding: 0;
+        margin: 0;
+        padding: 0;
         }
         a{
             text-decoration: none;
-            display: block;
         }
         li{
             list-style:none;
@@ -38,30 +37,29 @@
             text-align: center;
             line-height: 30px;
         }
-        #list a:hover{
-            background: #00f;
+        .one a{
+            margin-top:2px;
         }
         .one{
             display: none;
         }
-        ul li:hover .one{  display: block;  }
+        #list a:hover{
+            background: #00f;
+        }
+        ul li:hover .one {  display: block;  }
 
     </style>
 </head>
 <body>
-<div id="list">
-    <ul>
-        <li><a href="">link1</a>
-            <ul class="one">
-            <li><a href="">one</a></li>
-            <li><a href="">two</a></li>
-            </ul>
+    <ul id="list">
+        <li>
+            <a href="" id="click">link1</a>
+            <ul class="one"><li><a href="">one</a></li></ul>
+            <ul class="one"><li><a href="">two</a></li></ul>
         </li>
         <li><a href="">link2</a></li>
         <li><a href="">link3</a></li>
         <li class="last"><a href="">link4</a></li>
     </ul>
-
-</div>
 </body>
 </html>
