--- a/luan/6.html
+++ b/luan/6.html
@@ -17,10 +17,10 @@
             position: relative;
         }
         #div .div2{
-            border-left: 0px;
+            border-left: 0;
         }
         #div .div1{
-            border-top: 0px;
+            border-top: 0;
         }
         #one:hover{
             border: solid 1px #00ff00;
@@ -38,7 +38,7 @@
             border: solid 1px #00ff00;
             position: absolute;
             right: 1px;
-            top:0px;
+            top:0;
         }
         #three:hover{
             border: solid 1px #00ff00;
