--- a/luan/时间.html
+++ b/luan/时间.html
@@ -10,7 +10,7 @@
     var year= myDate.getFullYear(),month=myDate.getMonth(),day= myDate.getDate();
     var hour= myDate.getHours(),minute= myDate.getMinutes(),secone= myDate.getSeconds();
     var week= myDate.getDay();
-    document.write("现在是" + year + "年" + month + "月" + day + "日" + hour + "点" + minute + "分" + secone + "秒" + "(星期" + week + ")" + "， 欢迎您的到访！");
+    document.write("现在是" + year + "年" + (month + 1) + "月" + day + "日" + hour + "点" + minute + "分" + secone + "秒" + "(星期" + week + ")" + "， 欢迎您的到访！");
 </script>
 
 </body>
