--- a/luan/判断一年第几天.html
+++ b/luan/判断一年第几天.html
@@ -8,7 +8,7 @@
 <script>
     function DayOfYear(year,month,day) {
         var months = [31,28,31,30,31,30,31,31,30,31,30,31];
-        if(year%4 == 0){
+        if(year%4 == 0 && year%100 !=0 || year%400 == 0){
             months[1] = 29;
         }
         var amount = 0;
@@ -17,7 +17,7 @@
         }
         document.write(amount + day);
     }
-    DayOfYear(2004,12,31);
+    DayOfYear(1904,12,31);
 
 
 </script>
