--- a/luan/框.html
+++ b/luan/框.html
@@ -67,8 +67,8 @@
     <script>
         var oDiv = document.getElementById('div');
         var oDiv1 = oDiv.getElementsByTagName('div');
-        var oUl = document.getElementById('ul');
-        var oLi = oUl.getElementsByTagName('li');
+        var oUl1 = document.getElementById('ul1');
+        var oLi = oUl1.getElementsByTagName('li');
         for(var i=0 ; i < oLi.length ; i++){
             oLi[i].xx = i;
             oLi[i].onclick = function () {
