--- a/luan/框.html
+++ b/luan/框.html
@@ -28,10 +28,7 @@
             width: 400px;
             height: 350px;
             border: solid 1px ;
-            position: absolute;
-            left: 50% ;
-            top: 50% ;
-            transform: translate(-50% , -50%);
+            margin: 100px auto ;
             background: #eee;
         }
         #ul1 .first{
