--- a/luan/选项卡.html
+++ b/luan/选项卡.html
@@ -83,10 +83,11 @@
         <li>4</li>
     </ul>
     <ul id="ul1">
-        <li>&lt;</li>
-        <li>&gt;</li>
+        <li>&lt</li>
+        <li>&gt</li>
     </ul>
     <script>
+        var oDiv0 = document.getElementById('div');
         var oDiv1 = document.getElementById('div1');
         var oDiv = oDiv1.getElementsByTagName('div');
         var oUl = document.getElementById('ul');
@@ -94,13 +95,20 @@
         var oUl1 = document.getElementById('ul1');
         var oLi1 = oUl1.getElementsByTagName('li');
         var now = 0;
+        var reset = function () {
+            for ( i = 0; i < oDiv.length; i++) {
+            oDiv[i].className = '';
+            oLi[i].className = '';
+        }
+        };
+        var update = function () {
+            oDiv[now].className = 'show';
+            oLi[now].className = 'show';
+        };
         for(var i=0 ; i<oLi.length ; i++){
             oLi[i].count = i;
             oLi[i].onmouseover = function () {
-                for(i=0 ; i < oLi.length ; i++){
-                    oLi[i].className = '';
-                    oDiv[i].className = '';
-                }
+                    reset();
                 this.className = 'show';
                 oDiv[this.count].className = 'show';
                 now = this.count;
@@ -114,12 +122,8 @@
                     if (now == -1) {
                         now = oDiv.length - 1;
                     }
-                    for ( i = 0; i < oDiv.length; i++) {
-                        oDiv[i].className = '';
-                        oLi[i].className = '';
-                    }
-                    oDiv[now].className = 'show';
-                    oLi[now].className = 'show';
+                    reset();
+                    update();
 //                    for(var i=0 ; i<oDiv.length ; i++){
 //                        if(oDiv[i].className == 'show'){
 //                            if(i == 0){
@@ -140,38 +144,24 @@
                     if (now == oDiv.length) {
                         now = 0
                     }
-                    for ( i = 0; i < oDiv.length; i++) {
-                        oDiv[i].className = '';
-                        oLi[i].className = '';
-                    }
-                    oDiv[now].className = 'show';
-                    oLi[now].className = 'show';
+                    reset();
+                    update();
                 }
             }
         }
         var mousr = function () {
             var timer = setInterval(function () {
-                for(var i=0 ; i< oDiv.length ; i++){
-                    oDiv[i].className = '';
-                    oLi[i].className = '';
-                }
+                reset();
                 now++;
                 if(now == oDiv.length){
                     now = 0;
                 }
-                oDiv[now].className = 'show';
-                oLi[now].className = 'show';
+                update();
             }, 500);
-            oDiv1.onmouseover = function () {
+            oDiv0.onmouseover = function () {
                 clearInterval(timer);
             };
-            oUl.onmouseover = function () {
-                clearInterval(timer);
-            };
-            oUl1.onmouseover = function () {
-                clearInterval(timer);
-            };
-            oDiv1.onmouseout = function () {
+            oDiv0.onmouseout = function () {
                 mousr();
             };
         };
