--- a/luan/11.html
+++ b/luan/11.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <div>
-        再提交一个
     </div>
+    <script>
+        aa();
+
+        function aa(){
+            console.log('1111');
+        }
+
+        console.log(bb);
+
+        bb();
+
+        var bb = function(){
+            console.log(2222);
+        }
+    </script>
 </body>
 </html>
