--- a/luan/11.html
+++ b/luan/11.html
@@ -10,19 +10,19 @@
     <div>
     </div>
     <script>
-        aa();
+        // aa();
 
-        function aa(){
-            console.log('1111');
-        }
+        // function aa(){
+        //     console.log('1111');
+        // }
 
-        console.log(bb);
+        // console.log(bb);
 
-        bb();
+        // bb();
 
-        var bb = function(){
-            console.log(2222);
-        }
+        // var bb = function(){
+        //     console.log(2222);
+        // }
     </script>
 </body>
 </html>
