--- a/luan/8.html
+++ b/luan/8.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+    div {
+        background: #cccccc;
+        color: #000;
+        margin: 200px auto;
+        text-align: center;
+    }
+    </style>
 </head>
 <body>
-
+<div id="div"></div>
 <script>
-    var Ntime = new Date();
+    function time(){
+        var Ntime = new Date();
         function timer(year,month,day) {
             var Ttime = new Date();
             Ttime.setFullYear(year);
@@ -25,16 +34,21 @@
             var minutes = 1000*60;
             var hours = minutes*60;
             var days = hours*24;
+            var oDiv = document.getElementById('div');
             if(Tsecond > Nsecond){
                 Tday = Math.floor((cha / days));
                 Thour = Math.floor( (cha-Tday*days)/hours );
                 Thesecond = (cha-Tday*days-Thour*hours)/1000;
-                document.write( "距离"+ year +"年"+ month +"月"+ day +"日还有" + Tday+"天" + Thour+"小时"+ Thesecond+"秒" )
+                oDiv.innerHTML = "距离"+ year +"年"+ month +"月"+ day +"日还有" + Tday+"天" + Thour+"小时"+ Thesecond+"秒";
             }else {
                 document.write("时间已经过去啦！");
             }
         }
-        timer(2018,7,11);
+        timer(2018,7,20);
+    }
+    setInterval(function(){
+        time();
+    },1000)
 </script>
 </body>
 </html>
