--- a/luan/1.html
+++ b/luan/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>这货不是网页</title>
 </head>
-<body><h1>看图别看网页</h1>
+<body><h1>瞅啥</h1>
 <img src="timg.jpg" title="你瞅啥？">
 </body>
 </html>
