--- a/网页制作/index.html
+++ b/网页制作/index.html
@@ -8,8 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="header">
-        <nav class="fd-nav fd-clearfix">
+    <header id="header fd-clearfix">
+        <nav class="fd-nav">
+            <form class="fd-nav-left">
+                <input id="nav-search" type="search" placeholder="别点奥，啥也搜不到"> 
+                <input id="nav-submit" type="submit" value="搜索">
+            </form>
+            
             <a class="fd-nav-right" href="">联系方式</a>
             <a class="fd-nav-right" href="">新闻中心</a>
             <a class="fd-nav-right" href="">电商设计</a>
@@ -17,8 +22,12 @@
             <a class="fd-nav-right" href="">成功案例</a>
             <a class="fd-nav-right" href="">关于我们</a>
             <a class="fd-nav-right" href="">首页</a>
+        </nav>
+        <div class="fd-wapper">
+            <span>aaa</span>
         </div>
     </header>
+    
 
 </body>
 </html>
