--- a/网页制作/index.html
+++ b/网页制作/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="icon/iconfont/iconfont.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header id="header fd-clearfix">
+    <header class="fd-clearfix" id="header">
         <nav class="fd-nav">
             <form class="fd-nav-left">
-                <input id="nav-search" type="search" placeholder="别点奥，啥也搜不到"> 
+                <input id="nav-search" type="search" placeholder="别点奥，啥也搜不到">
                 <input id="nav-submit" type="submit" value="搜索">
             </form>
-            
+
             <a class="fd-nav-right" href="">联系方式</a>
             <a class="fd-nav-right" href="">新闻中心</a>
             <a class="fd-nav-right" href="">电商设计</a>
@@ -24,10 +27,222 @@
             <a class="fd-nav-right" href="">首页</a>
         </nav>
         <div class="fd-wapper">
-            <span>aaa</span>
+            <div id="fd-bg1">
+                <div class="fd-bg-text" id="text1">不断学习与突破，总是站在行业前沿</div>
+                <div class="fd-bg-text" id="text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+
+            </div>
         </div>
     </header>
-    
+    <div class="fd-contentone">
+        <div class="fd-cone-first">
+            <span>选择我们的理由</span>
+        </div>
+        <div class="fd-iconbox">
+            <div class="fd-icon">
+                <i class="iconfont icondiannaoshouji01"></i>
+                <div class="fd-one-text">高端响应式网站</div>
+            </div>
+            <div class="fd-icon">
+                <i class="iconfont iconshouji"></i>
+                <div class="fd-one-text">微端应用开发</div>
+            </div>
+            <div class="fd-icon">
+                <i class="iconfont iconxiaochengxu"></i>
+                <div class="fd-one-text">app/小程序开发</div>
+            </div>
+            <div class="fd-icon">
+                <i class="iconfont iconwangzhanxinxi"></i>
+                <div class="fd-one-text">SEO优化</div>
+            </div>
+        </div>
+
+    </div>
+    <div class="fd-contenttwo">
+        <div id="bg"></div>
+        <div class="fd-ctwo-first">
+            <div class="fd-ctwo-top">8年时间 120位同事 3000个日夜</div>
+            <div class="fd-ctwo-two">值奥斯卡积分和客户艾瑞国际拉斯柯达合肥安科瑞高架库和拉开手机的话费卡好看奥斯卡绝代风华看会计安会计师对客户</div>
+            <div class="fd-ctwo-bot">
+                <div class="fd-ctwo-left">
+                    <span class="fd-ctwo-s1">560</span>
+                    <span class="fd-ctwo-s2">位</span>
+                    <p class="fd-ctwo-p">客户信赖之选</p>
+                </div>
+                <div class="fd-ctwo-left">
+                    <span class="fd-ctwo-s1">168</span>
+                    <span class="fd-ctwo-s2">家</span>
+                    <p class="fd-ctwo-p">知名企业支持</p>
+                </div>
+                <div class="fd-ctwo-left">
+                    <span class="fd-ctwo-s1">2015</span>
+                    <span class="fd-ctwo-s2">年</span>
+                    <p class="fd-ctwo-p">年度金牌设计企业</p>
+                </div>
+                <div class="fd-ctwo-left">
+                    <span class="fd-ctwo-s1">08</span>
+                    <span class="fd-ctwo-s2">年</span>
+                    <p class="fd-ctwo-p">时间的专注和沉淀</p>
+                </div>
+                <div class="fd-ctwo-left">
+                    <span class="fd-ctwo-s1">97</span>
+                    <span class="fd-ctwo-s2">%</span>
+                    <p class="fd-ctwo-p">以上客户满意度</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fd-contentthree">
+        <div class="fd-cthree-first">成功案例</div>
+        <div class="fd-cthree-div">
+            <ul class="fd-cthree-ul">
+                <li class="fd-cthree-li">
+                    <img src="./img/list1.jpg" alt="图片1">
+                    <div class="fd-cthree-left">帝微雅</div>
+                    <div class="fd-cthree-right">类别：响应式网站开发</div>
+                </li>
+                <li class="fd-cthree-li">
+                    <img src="./img/list2.jpg" alt="图片2">
+                    <div class="fd-cthree-left">新西兰手工冰棍</div>
+                    <div class="fd-cthree-right">类别：响应式网站开发</div>
+                </li>
+                <li class="fd-cthree-li">
+                    <img src="./img/list3.jpg" alt="图片3">
+                    <div class="fd-cthree-left">车业有限公司</div>
+                    <div class="fd-cthree-right">类别：定制网站开发</div>
+                </li>
+            </ul>
+
+            <ul class="fd-cthree-ul">
+                <li class="fd-cthree-li">
+                    <img src="./img/list4.jpg" alt="图片4">
+                    <div class="fd-cthree-left">农机集团有限公司</div>
+                    <div class="fd-cthree-right">类别：定制网站开发</div>
+                </li>
+                <li class="fd-cthree-li">
+                    <img src="./img/list5.jpg" alt="图片5">
+                    <div class="fd-cthree-left">阳光发动机有限公司</div>
+                    <div class="fd-cthree-right">类别：定制网站开发</div>
+                </li>
+                <li class="fd-cthree-li">
+                    <img src="./img/list6.jpg" alt="图片6">
+                    <div class="fd-cthree-left">能源科技有限公司</div>
+                    <div class="fd-cthree-right">类别：定制网站开发</div>
+                </li>
+            </ul>
+            <a class="fd-san" href="">
+                <span class="fd-cthree-span">.</span>
+                <span class="fd-cthree-span">.</span>
+                <span class="fd-cthree-span">.</span>
+            </a>
+        </div>
+    </div>
+    <footer id="fot">
+        <div class="fd-ft-one">
+            <div class="fd-ft-list">
+                <span class="fd-ft-span">公司新闻</span>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">网络公司搜索引擎优化:如何做好下篇</a>
+                    <span class="fd-ft-right">[2019-11-06]</span>
+                </div>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">移动端中的巅峰营销--微信营销</a>
+                    <span class="fd-ft-right">[2019-11-06]</span>
+                </div>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">做网站为你解析模版网站与定制网站有哪</a>
+                    <span class="fd-ft-right">[2019-11-06]</span>
+                </div>
+            </div>
+            <div class="fd-ft-list">
+                <span class="fd-ft-span">行业动态</span>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">从四大层面看水滴筹合并轻松筹的可能性</a>
+                    <span class="fd-ft-right">[2018-04-11]</span>
+                </div>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">不是百度，不是谷歌</a>
+                    <span class="fd-ft-right">[2018-04-10]</span>
+                </div>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">一份靠谱的PRD文档，需要注重哪些细节？</a>
+                    <span class="fd-ft-right">[2018-04-10]</span>
+                </div>
+            </div>
+            <div class="fd-ft-list">
+                <span class="fd-ft-span">技术学堂</span>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">如何保护注册域名？保护域名不被别人抢</a>
+                    <span class="fd-ft-right">[2018-04-10]</span>
+                </div>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">如何提高网站流量和访问量？</a>
+                    <span class="fd-ft-right">[2018-04-10]</span>
+                </div>
+                <div class="fd-ft-div fd-clearfix">
+                    <a class="fd-ft-left" href="">建设网站对企业有哪些好处？</a>
+                    <span class="fd-ft-right">[2018-04-10]</span>
+                </div>
+            </div>
+        </div>
+        <div class="fd-ft-two">
+            <div class="fd-ft-part1">
+                <ul class="fd-clearfix">
+                    <li><a href="">关于我们</a></li>
+                    <li>
+                        <a href="">成功案例</a>
+                        <dl>
+                            <dt><a href="">定制网站开发</a></dt>
+                            <dt><a href="">响应式网站开发</a></dt>
+                            <dt><a href="">手机网站开发</a></dt>
+                            <dt><a href="">微网站开发</a></dt>
+                        </dl>
+                    </li>
+                    <li><a href="">网站建设</a></li>
+                    <li><a href="">电商设计</a></li>
+                    <li>
+                        <a href="">新闻中心</a>
+                        <dl>
+                            <dt><a href="">公司新闻</a></dt>
+                            <dt><a href="">行业动态</a></dt>
+                            <dt><a href="">技术学堂</a></dt>
+                        </dl>
+                    </li>
+                    <li><a href="">联系方式</a></li>
+                    <div class="fd-p1-right">
+                        <div class="fd-p1-div"><i class="iconfont iconicon fd-ft-icon"></i></div>
+                        <div class="fd-p1-div"><i class="iconfont iconweibo fd-ft-icon"></i></div>
+                        <div class="fd-p1-div"><i class="iconfont iconweixin fd-ft-icon"></i></div>
+                        <div id="rlast">
+                            <div>Tel-A：020-66889888</div>
+                            <div>Tel-B：188 666 999 88</div>
+                            <div>E-Mail：admin@admin.com</div>
+                            <div>合肥市高新区长江路合肥秀站网络</div>
+                        </div>
+                    </div>
+                </ul>
+
+            </div>
+            <div class="fd-ft-part2">
+                <ul>
+                    <li><span>友情链接:</span></li>
+                    <li><a href="">合肥网站建设</a></li>
+                    <li><a href="">织梦模板</a></li>
+                    <li><a href="">秀站云</a></li>
+                    <li><a href="">织梦源码</a></li>
+                    <li><a href="">企业网站模板</a></li>
+                    <li><a href="">织梦免费模板</a></li>
+                    <li><a href="">微信小程序开发</a></li>
+                </ul>
+                <div id="lastdiv">
+                        Copyright © 2002-2017 某某网站建设有限公司 版权所有 Power by
+                        <a href="Www.Xiuzhanwang.Com">Www.Xiuzhanwang.Com </a>
+                        <span> 备案号：粤ICP备12345678号</span>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
+
 </html>
