--- a/网页制作/index.html
+++ b/网页制作/index.html
@@ -34,6 +34,26 @@
             </div>
         </div>
     </header>
+    <div id="body-right">
+        <div class="fd-body-right">
+            <div class="fd-body-left">
+                <i class="iconfont iconweibiaoti-"></i>
+                <span class="fd-hidden">02-13423526</span> 
+            </div>
+        </div>
+        <div class="fd-body-right">
+            <div class="fd-body-left">
+                <i class="iconfont iconqq"></i>
+                <span class="fd-hidden">客服一</span>
+            </div>
+        </div>
+        <div class="fd-body-right">
+            <div class="fd-body-left">
+                <i class="iconfont iconchangyongtubiao-xianxingdaochu-zhuanqu-"></i>
+                <span class="fd-hidden">返回顶部</span>
+            </div>
+        </div>
+    </div>
     <div class="fd-contentone">
         <div class="fd-cone-first">
             <span>选择我们的理由</span>
@@ -65,27 +85,27 @@
             <div class="fd-ctwo-two">值奥斯卡积分和客户艾瑞国际拉斯柯达合肥安科瑞高架库和拉开手机的话费卡好看奥斯卡绝代风华看会计安会计师对客户</div>
             <div class="fd-ctwo-bot">
                 <div class="fd-ctwo-left">
-                    <span class="fd-ctwo-s1">560</span>
+                    <span class="fd-ctwo-s1" id="js-s1">560</span>
                     <span class="fd-ctwo-s2">位</span>
                     <p class="fd-ctwo-p">客户信赖之选</p>
                 </div>
                 <div class="fd-ctwo-left">
-                    <span class="fd-ctwo-s1">168</span>
+                    <span class="fd-ctwo-s1" id="js-s2">168</span>
                     <span class="fd-ctwo-s2">家</span>
                     <p class="fd-ctwo-p">知名企业支持</p>
                 </div>
                 <div class="fd-ctwo-left">
-                    <span class="fd-ctwo-s1">2015</span>
+                    <span class="fd-ctwo-s1" id="js-s3">2015</span>
                     <span class="fd-ctwo-s2">年</span>
                     <p class="fd-ctwo-p">年度金牌设计企业</p>
                 </div>
                 <div class="fd-ctwo-left">
-                    <span class="fd-ctwo-s1">08</span>
+                    <span class="fd-ctwo-s1" id="js-s4">08</span>
                     <span class="fd-ctwo-s2">年</span>
                     <p class="fd-ctwo-p">时间的专注和沉淀</p>
                 </div>
                 <div class="fd-ctwo-left">
-                    <span class="fd-ctwo-s1">97</span>
+                    <span class="fd-ctwo-s1" id="js-s5">97</span>
                     <span class="fd-ctwo-s2">%</span>
                     <p class="fd-ctwo-p">以上客户满意度</p>
                 </div>
@@ -243,6 +263,8 @@
         </div>
     </footer>
 
+
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
