--- a/网页制作/index.html
+++ b/网页制作/index.html
@@ -27,18 +27,39 @@
             <a class="fd-nav-right" href="">首页</a>
         </nav>
         <div class="fd-wapper">
-            <div id="fd-bg1">
-                <div class="fd-bg-text" id="text1">不断学习与突破，总是站在行业前沿</div>
-                <div class="fd-bg-text" id="text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
-
+            <div class="fd-wapper1" id="js-container">
+                <div class="fd-bg1">
+                    <div class="fd-bg-text fd-text1">不断学习与突破 总是站在行业前沿</div>
+                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                </div>
             </div>
+            <div class="fd-wapper1">
+                <div class="fd-bg1">
+                    <div class="fd-bg-text fd-text1">将技术转变为单纯的生产力 而不是单纯的炫酷</div>
+                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                </div>
+            </div>
+            <div class="fd-wapper1">
+                <div class="fd-bg1">
+                    <div class="fd-bg-text fd-text1">不断学习与突破，总是站在行业前沿</div>
+                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                </div>
+            </div>
+            <div class="fd-wapper1">
+                <div class="fd-bg1">
+                    <div class="fd-bg-text fd-text1">用营销的思维做设计 让艺术为商业服务</div>
+                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                </div>
+            </div>
+            
         </div>
+
     </header>
     <div id="body-right">
         <div class="fd-body-right">
             <div class="fd-body-left">
                 <i class="iconfont iconweibiaoti-"></i>
-                <span class="fd-hidden">02-13423526</span> 
+                <span class="fd-hidden">02-13423526</span>
             </div>
         </div>
         <div class="fd-body-right">
@@ -47,7 +68,7 @@
                 <span class="fd-hidden">客服一</span>
             </div>
         </div>
-        <div class="fd-body-right">
+        <div class="fd-body-right" id="js-top">
             <div class="fd-body-left">
                 <i class="iconfont iconchangyongtubiao-xianxingdaochu-zhuanqu-"></i>
                 <span class="fd-hidden">返回顶部</span>
@@ -255,15 +276,15 @@
                     <li><a href="">微信小程序开发</a></li>
                 </ul>
                 <div id="lastdiv">
-                        Copyright © 2002-2017 某某网站建设有限公司 版权所有 Power by
-                        <a href="Www.Xiuzhanwang.Com">Www.Xiuzhanwang.Com </a>
-                        <span> 备案号：粤ICP备12345678号</span>
+                    Copyright © 2002-2017 某某网站建设有限公司 版权所有 Power by
+                    <a href="Www.Xiuzhanwang.Com">Www.Xiuzhanwang.Com </a>
+                    <span> 备案号：粤ICP备12345678号</span>
                 </div>
             </div>
         </div>
     </footer>
 
-
+    <script src="./js/jquery.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
