--- a/网页制作/index.html
+++ b/网页制作/index.html
@@ -17,7 +17,7 @@
                 <input id="nav-search" type="search" placeholder="别点奥，啥也搜不到">
                 <input id="nav-submit" type="submit" value="搜索">
             </form>
-
+wa
             <a class="fd-nav-right" href="">联系方式</a>
             <a class="fd-nav-right" href="">新闻中心</a>
             <a class="fd-nav-right" href="">电商设计</a>
@@ -26,8 +26,8 @@
             <a class="fd-nav-right" href="">关于我们</a>
             <a class="fd-nav-right" href="">首页</a>
         </nav>
-        <div class="fd-wapper">
-            <div class="fd-wapper1" id="js-container">
+        <div class="fd-wapper" id="js-container">
+            <div class="fd-wapper1">
                 <div class="fd-bg1">
                     <div class="fd-bg-text fd-text1">不断学习与突破 总是站在行业前沿</div>
                     <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
@@ -51,11 +51,17 @@
                     <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
                 </div>
             </div>
-            <ul class="fd-wp-ul">
-                <li class="fd-wp-li"></li>
-                <li class="fd-wp-li"></li>
-                <li class="fd-wp-li"></li>
-                <li class="fd-wp-li"></li>
+            <div class="fd-wapper1" >
+                <div class="fd-bg1">
+                    <div class="fd-bg-text fd-text1">不断学习与突破 总是站在行业前沿</div>
+                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                </div>
+            </div>
+            <ul class="fd-wp-ul js-fd-ul">
+                <li class="fd-selected"></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
 
         </div>
