--- a/网页制作/index.html
+++ b/网页制作/index.html
@@ -30,31 +30,31 @@ wa
             <div class="fd-wapper1">
                 <div class="fd-bg1">
                     <div class="fd-bg-text fd-text1">不断学习与突破 总是站在行业前沿</div>
-                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                    <div class="fd-bg-text fd-text2">我们对每一个团队成员精挑细选，我们要求每一个团队成员都做自己思想的主人，要有思想的做事，我们要努力打造一支学习型的团队，因为我们深知：视觉更广 眼界更宽 服务才更出色</div>
                 </div>
             </div>
             <div class="fd-wapper1">
                 <div class="fd-bg1">
                     <div class="fd-bg-text fd-text1">将技术转变为单纯的生产力 而不是单纯的炫酷</div>
-                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
-                </div>
-            </div>
-            <div class="fd-wapper1">
-                <div class="fd-bg1">
-                    <div class="fd-bg-text fd-text1">不断学习与突破，总是站在行业前沿</div>
-                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                    <div class="fd-bg-text fd-text2">我们对每一个团队成员精挑细选，我们要求每一个团队成员都做自己思想的主人，要有思想的做事，我们要努力打造一支学习型的团队，因为我们深知：视觉更广 眼界更宽 服务才更出色</div>
                 </div>
             </div>
             <div class="fd-wapper1">
                 <div class="fd-bg1">
                     <div class="fd-bg-text fd-text1">用营销的思维做设计 让艺术为商业服务</div>
-                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                    <div class="fd-bg-text fd-text2">我们对每一个团队成员精挑细选，我们要求每一个团队成员都做自己思想的主人，要有思想的做事，我们要努力打造一支学习型的团队，因为我们深知：视觉更广 眼界更宽 服务才更出色</div>
+                </div>
+            </div>
+            <div class="fd-wapper1">
+                <div class="fd-bg1">
+                    <div class="fd-bg-text fd-text1">用营销的思维做设计 让艺术为商业服务</div>
+                    <div class="fd-bg-text fd-text2">我们对每一个团队成员精挑细选，我们要求每一个团队成员都做自己思想的主人，要有思想的做事，我们要努力打造一支学习型的团队，因为我们深知：视觉更广 眼界更宽 服务才更出色</div>
                 </div>
             </div>
             <div class="fd-wapper1" >
                 <div class="fd-bg1">
                     <div class="fd-bg-text fd-text1">不断学习与突破 总是站在行业前沿</div>
-                    <div class="fd-bg-text fd-text2">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈嗝哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</div>
+                    <div class="fd-bg-text fd-text2">我们对每一个团队成员精挑细选，我们要求每一个团队成员都做自己思想的主人，要有思想的做事，我们要努力打造一支学习型的团队，因为我们深知：视觉更广 眼界更宽 服务才更出色</div>
                 </div>
             </div>
             <ul class="fd-wp-ul js-fd-ul">
